Fixed z-index on menu dropdowns

--- a/symphony/assets/css/symphony.css
+++ b/symphony/assets/css/symphony.css
@@ -171,7 +171,7 @@
 		);
 		color: #fff;
 		text-shadow: 1px 1px 0 hsla(0, 0%, 0%, 0.2);
-		z-index: 1;
+		z-index: 5;
 	}
 	#nav > li:hover {
 		color: #fff;
